--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
 </head>
 
 <body>
-<<<<<<< HEAD
-<h1>How are you?</h1>
-=======
-<h1>How are you??</h1>
->>>>>>> 129d7457b9f39feb14049964658cd2aa13ede800
+<h1>How are yous?</h1>
 </body>
 
 </html>
